--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,9 @@
     "roots/wp-config": "1.0.0",
     "roots/wp-password-bcrypt": "1.0.0",
     "humanmade/s3-uploads": "~2.2",
-    "wpackagist-plugin/mailgun": "1.7.1"
+    "wpackagist-plugin/mailgun": "1.7.1",
+    "wpackagist-plugin/elementor":"3.2.1",
+    "wpackagist-theme/hello-elementor":"2.3.1"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.4.2",
