--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
     "wpackagist-plugin/mailgun": "1.7.1",
     "wpackagist-plugin/elementor":"3.2.1",
     "wpackagist-theme/hello-elementor":"2.3.1",
-    "woocommerce/woocommerce": "5.2.2"
+    "wpackagist-plugin/woocommerce":"5.2.2"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.4.2",
