--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,9 @@
     "wpackagist-plugin/uncanny-learndash-toolkit":"3.5",
     "wpackagist-plugin/woocommerce-sendinblue-newsletter-subscription":"2.0.19",
     "wpackagist-plugin/ele-custom-skin":"3.1.0",
-    "wpackagist-plugin/password-protected":"2.4"
+    "wpackagist-plugin/password-protected":"2.4",
+    "wpackagist-plugin/multi-rating":"5.0.5",
+    "wpackagist-plugin/rate-my-post":"3.3.2"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.4.2",
