--- a/composer.json
+++ b/composer.json
@@ -34,10 +34,10 @@
     "composer/installers": "^1.7",
     "vlucas/phpdotenv": "^3.4.0",
     "oscarotero/env": "^1.2.0",
-    "roots/wordpress": "5.7.2",
+    "roots/wordpress": "5.9.2",
     "roots/wp-config": "1.0.0",
     "roots/wp-password-bcrypt": "1.0.0",
-    "humanmade/s3-uploads": "~2.2",
+    "humanmade/s3-uploads": "3.0.4",
     "wpackagist-plugin/mailgun": "1.7.9",
     "wpackagist-plugin/elementor":"3.2.4",
     "wpackagist-theme/hello-elementor":"2.3.1",
